--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
 	},
 	"homepage": "https://github.com/RenqiangJs/webpackConfig#readme",
 	"dependencies": {
+		"core-js": "^3.20.2",
 		"express": "^4.17.2",
-		"extract-text-webpack-plugin": "^3.0.2",
 		"friendly-errors-webpack-plugin": "^1.7.0",
 		"fs": "0.0.1-security",
 		"glob": "^7.2.0",
 		"html-webpack-plugin": "^4.4.1",
-		"mini-css-extract-plugin": "^1.0.0",
 		"path": "^0.12.7",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"styled-components": "^5.3.3",
 		"vue": "^2.6.14",
 		"vue-style-loader": "^4.1.3",
+		"webpack": "^4.40.0",
 		"webpack-merge": "^5.8.0"
 	},
 	"devDependencies": {
@@ -47,13 +47,17 @@
 		"css-loader": "^4.3.0",
 		"html-loader": "^1.1.0",
 		"less": "^3.13.1",
-		"less-loader": "^7.3.0",
+		"less-loader": "^5.0.0",
+		"mini-css-extract-plugin": "^1.6.2",
 		"node-sass": "^7.0.1",
+		"postcss": "^8.4.5",
+		"postcss-loader": "^4.2.0",
+		"postcss-preset-env": "^7.2.3",
 		"sass-loader": "^12.4.0",
+		"style-loader": "^2.0.0",
 		"url-loader": "^4.1.1",
 		"vue-loader": "^15.9.8",
 		"vue-template-compiler": "^2.6.14",
-		"webpack": "^4.35.0",
 		"webpack-cli": "^3.3.5"
 	}
 }
